ilass-cli/tests/snapshots/align__oppenheimer_aac.snap
---
source: ilass-cli/tests/align.rs
expression: "align(\"oppenheimer.in.srt\", \"oppenheimer.aac\")"
---
1
00:00:00,560 --> 00:00:03,999
We knew the world
would not be the same.

2
00:00:05,780 --> 00:00:08,999
Few people laughed.

3
00:00:09,900 --> 00:00:11,059
Few people cried.

4
00:00:11,059 --> 00:00:14,398
Most people were silent.

5
00:00:15,979 --> 00:00:19,847
I remembered the line
from the Hindu scripture,

6
00:00:19,859 --> 00:00:22,718
the Bhagavad Gita.

7
00:00:25,671 --> 00:00:26,370
Vishnu

8
00:00:28,791 --> 00:00:34,140
is trying to persuade the
prince that he should do his

9
00:00:34,151 --> 00:00:42,239
duty and to impress him, takes
on his multi-armed form and

10
00:00:42,250 --> 00:00:50,399
says, "Now, I am become death,
the destroyer of worlds."

11
00:00:50,410 --> 00:00:53,330
I suppose we all thought
that one way or another.
