ilass-cli/tests/snapshots/align__ref_eq_in.snap
---
source: ilass-cli/tests/align.rs
expression: "align(\"oppenheimer.ref.srt\", \"oppenheimer.ref.srt\")"
---
1
00:00:00,650 --> 00:00:02,920
We knew the world
would not be the same.

2
00:00:05,850 --> 00:00:08,270
Few people laughed.

3
00:00:09,970 --> 00:00:11,410
Few people cried.

4
00:00:12,150 --> 00:00:13,920
Most people were silent.

5
00:00:17,022 --> 00:00:20,943
I remembered the line
from the Hindu scripture,

6
00:00:20,940 --> 00:00:22,340
the Bhagavad Gita.

7
00:00:25,530 --> 00:00:26,590
Vishnu

8
00:00:28,785 --> 00:00:33,327
is trying to persuade
the prince that

9
00:00:33,330 --> 00:00:34,890
he should do his duty

10
00:00:35,470 --> 00:00:42,980
and, to impress him, takes
on his multi-armed form, and says...

11
00:00:43,730 --> 00:00:47,650
"Now, I am become death,
the destroyer of worlds."

12
00:00:50,340 --> 00:00:53,040
I suppose we all thought
that one way or another.
